# figma-mcp

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json
examples/: test_file_read.py  test_frame_extract.py
src/figma_mcp/: __init__.py  config.py  figma_client.py  server.py  utils.py
tests/: test_tools.py
