[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "figma-mcp"
version = "0.1.0"
description = "MCP server for the Figma API"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.3.0",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
figma-mcp = "figma_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/figma_mcp"]
